A large update to the buildbot configuration.
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1868 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/buildbot/public_html/perf/dashboard/ui/details.html
+++ b/buildbot/public_html/perf/dashboard/ui/details.html
@@ -128,7 +128,7 @@ function init() {
   var cl = params.cl;
   var trace = params.trace;
   document.getElementById("description").innerText = trace + " in r" + cl;
-  Fetch(cl + "_" + trace +".dat", received_data);
+  // Fetch(cl + "_" + trace +".dat", received_data);
 }
 
 window.addEventListener("load", init, false);
